<?xml version="1.0" encoding="utf-8"?>
<resources>
    //Main strings
    <string name="app_name">Tune Tempo Tape</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tune">Tune</string>
    <string name="title_activity_tempo">Tempo</string>
    <string name="title_activity_tape">Tape</string>

    //Tempo strings
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="TAP">TAP</string>
    //Tune strings
    <string name="Octave">Octave</string>
    <string name="Note">Note</string>
    <string name="C">C</string>
    <string name="Csharp">C#</string>
    <string name="D">D</string>
    <string name="Dsharp">D#</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="Fsharp">F#</string>
    <string name="G">G</string>
    <string name="Gsharp">G#</string>
    <string name="A">A</string>
    <string name="Asharp">A#</string>
    <string name="B">B</string>
    //Tape strings
    <string name="Click">Click</string>
    <string name="Rec">Rec</string>
    <string name="Size">Size</string>
    <string name="title_activity_settings">Settings</string>
    //Setting strings
    <string name="File_size"> Max file size</string>
    <string name="About">About</string>
    <string name="aboutText">All recorded files are saved to the device
    and will show up in a media player of your choice. App created by Ludvig Gee.</string>
    <string name="Settings">Settings</string>

</resources>
