<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_tune"
            android:id="@+id/TuneMainButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_tempo"
            android:id="@+id/TempoMainButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_tape"
            android:id="@+id/TapeMainButton"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"/>
    </LinearLayout>
</RelativeLayout>
