<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gimpleton.tunetempotape.TapeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <com.gimpleton.tunetempotape.Chronometer
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/DurationTape"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/SizeTape"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center" />
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFFFFF"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:divider="#ffffffff">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Rec"
                    android:id="@+id/RecTapeButton"
                    android:layout_weight="1"
                    android:onClick="start"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Stop"
                    android:id="@+id/StopTapeButton"
                    android:layout_weight="1"
                    android:onClick="stop"/>

            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFFFFF"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"/>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Click"
                    android:id="@+id/ClickTapeButton"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Play"
                    android:id="@+id/PlayBackTapeButton"
                    android:onClick="play"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>


    </LinearLayout>
</RelativeLayout>
